minor improvements and markup

--- a/SIRDS model.ipynb
+++ b/SIRDS model.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below we import packages."
+    "Below we import packages. (MUST RUN)"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Time step in days:"
+    "Time step in days: (MUST RUN)"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Total time in days:"
+    "Total time in days: (MUST RUN)"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Other parameters:"
+    "Other parameters: (MUST RUN)"
    ]
   },
   {
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initial population conditions:"
+    "Initial population conditions: (MUST RUN)"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initializing population arrays:"
+    "Initializing population arrays: (MUST RUN)"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Applying initial population conditions:"
+    "Applying initial population conditions: (MUST RUN)"
    ]
   },
   {
