--- a/SIR model.ipynb
+++ b/SIR model.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below we import packages."
+    "Below we import packages. (MUST RUN)"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Time step in days:"
+    "Time step in days: (MUST RUN)"
    ]
   },
   {
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Total time in days:"
+    "Total time in days: (MUST RUN)"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Other parameters:"
+    "Other parameters: (MUST RUN)"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initial population conditions:"
+    "Initial population conditions: (MUST RUN)"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initializing population arrays:"
+    "Initializing population arrays: (MUST RUN)"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Applying initial population conditions:"
+    "Applying initial population conditions: (MUST RUN)"
    ]
   },
   {
