--- a/Brauer SIR with birth and death.ipynb
+++ b/Brauer SIR with birth and death.ipynb
@@ -219,7 +219,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "350b40c27c004a9086a0f286f38060f2",
+       "model_id": "f5ed5fdd34c046a28e972155e5de7ea5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -232,9 +232,11 @@
     }
    ],
    "source": [
-    "@interact(tottime=(100,10000,5), lmbda=(0,1,0.01), alpha=(0,1,0.01), mu=(0,0.01,0.0001), nu=(0,0.01,0.0001),\n",
-    "          f=(0,1,0.01), N0=(0,100000,1000), pr=(0,1,0.0001), pi=(0,1,0.0001))\n",
-    "def SIR_model(tottime=500, lmbda=0.10, alpha=0.07, mu=0.001, nu=0.001, f=0.95, N0=10000, pr=0.0, pi=0.01):\n",
+    "@interact(tottime=(100,10000,5), lmbda=(0,1,0.01), alpha=(0,1,0.01), mu=(0,0.01,0.0001),\n",
+    "          nu=(0,0.01,0.0001),f=(0,1,0.01), N0=(0,100000,1000), pr=(0,1,0.0001),\n",
+    "          pi=(0,1,0.0001))\n",
+    "def SIR_model(tottime=500, lmbda=0.10, alpha=0.07, mu=0.001, nu=0.001, f=0.95, N0=10000,\n",
+    "              pr=0.0, pi=0.01):\n",
     "    dt = 0.01\n",
     "    \n",
     "    niter = int(math.ceil(tottime/dt))\n",
@@ -286,13 +288,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4a6c5d9f476465a88e83e5e49da7dad",
+       "model_id": "7fc5c74c3f2446079184276189ef3c0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -306,21 +308,22 @@
    ],
    "source": [
     "@interact(tottime=(100,10000,5), avg_contacts_per_day=(0,2,0.01), length_of_infection=(0,50,1),\n",
-    "          deaths_per_100000=(0,100000,1), births_per_1000=(0,500,1),\n",
+    "          deaths_per_100000_per_day=(0,100000,0.1), births_per_100000_per_day=(0,1000,0.1),\n",
     "          fraction_recovered=(0,1,0.01), initial_population=(0,100000,1000),\n",
-    "          pr=(0,1,0.0001), pi=(0,1,0.0001))\n",
+    "          initial_percent_recovered=(0,1,0.0001), initial_percent_infected=(0,1,0.0001))\n",
     "def SIR_model(tottime=500, avg_contacts_per_day=0.10, length_of_infection=14,\n",
-    "              deaths_per_100000=864, births_per_1000=12, fraction_recovered=0.95,\n",
-    "              initial_population=10000, pr=0.0, pi=0.01):\n",
+    "              deaths_per_100000_per_day=2.4, births_per_100000_per_day=3.3,\n",
+    "              fraction_recovered=0.95, initial_population=10000,\n",
+    "              initial_percent_recovered=0.0, initial_percent_infected=0.01):\n",
     "    dt = 0.01\n",
     "    \n",
     "    lmbda = avg_contacts_per_day\n",
     "    \n",
     "    alpha = 1/length_of_infection\n",
     "    \n",
-    "    mu = deaths_per_100000/365/100000\n",
+    "    mu = deaths_per_100000_per_day/100000\n",
     "    \n",
-    "    nu = births_per_1000/365/1000\n",
+    "    nu = births_per_100000_per_day/100000\n",
     "    \n",
     "    f = fraction_recovered\n",
     "    \n",
@@ -331,11 +334,11 @@
     "    R = np.zeros(niter)\n",
     "    N = np.zeros(niter)\n",
     "    \n",
-    "    ps = 1-pi-pr\n",
+    "    initial_percent_susceptible = 1-initial_percent_infected-initial_percent_recovered\n",
     "\n",
-    "    S[0] = ps*initial_population\n",
-    "    I[0] = pi*initial_population\n",
-    "    R[0] = pr*initial_population\n",
+    "    S[0] = initial_percent_susceptible*initial_population\n",
+    "    I[0] = initial_percent_infected*initial_population\n",
+    "    R[0] = initial_percent_recovered*initial_population\n",
     "    N[0] = initial_population\n",
     "    \n",
     "    for j in range(niter-1):\n",
@@ -357,19 +360,22 @@
     "    plt.plot(t, N, 'y')\n",
     "    plt.gca().legend(('susceptible','infected','recovered','total'),loc='right')\n",
     "    plt.title('Brauer 2008 SIR model with birth and death, R0 = ' + str(R0approx))\n",
-    "    plt.xlabel('days since ' + str(pi*100) + ' percent of population infected')\n",
+    "    plt.xlabel('days since ' + str(initial_percent_infected*100) +\n",
+    "               ' percent of population infected')\n",
     "    plt.ylabel('population')\n",
     "    plt.show()\n",
     "    \n",
     "    print('Total time = ' + str(tottime) + ' days',\n",
-    "          'Average contacts sufficient to transmit disease per day = ' + str(lmbda),\n",
+    "          'Average contacts with an infective sufficient to transmit disease per day = '\n",
+    "          + str(lmbda) + ' people',\n",
     "          'Length of infection = ' + str(length_of_infection) + ' days',\n",
-    "          'Deaths per 100,000 per year = ' + str(deaths_per_100000) + ' deaths',\n",
-    "          'Births per 1000 per year = ' + str(births_per_1000) + ' births',\n",
+    "          'Deaths per 100000 per day = ' + str(deaths_per_100000_per_day) + ' deaths',\n",
+    "          'Births per 100000 per day = ' + str(births_per_100000_per_day) + ' births',\n",
     "          'Fraction of population who recover = ' + str(fraction_recovered),\n",
     "          'Initial population = ' + str(initial_population) + ' people',\n",
-    "          'Initial percent recovered = ' +str(pr*100) + '%',\n",
-    "          'Initial percent infected = ' + str(pi*100) + '%',\n",
+    "          'Initial percent recovered = ' +str(initial_percent_recovered*100) + '%',\n",
+    "          'Initial percent infected = ' + str(initial_percent_infected*100) + '%',\n",
+    "          'Total population at the end of 1st year = ' + str(N[36600].round(0)),\n",
     "         sep = \"\\n\")\n",
     "    \n",
     "    return plt.show()"
