plots for presentation on endemics'

--- a/Brauer SIR with birth and death.ipynb
+++ b/Brauer SIR with birth and death.ipynb
@@ -290,13 +290,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dde22795aad14111871ddbd05b0ece52",
+       "model_id": "3e5b4403342642bab0cb203779873b19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -309,9 +309,9 @@
     }
    ],
    "source": [
-    "@interact(total_time=(100,10000,5), avg_contacts_per_day=(0,5,0.01), length_of_infection=(0,50,1),\n",
+    "@interact(total_time=(100,10000,5), avg_contacts_per_day=(0,5,0.01), length_of_infection=(0,100,1),\n",
     "          deaths_per_100000_per_day=(0,100000,0.1), births_per_100000_per_day=(0,1000,0.1),\n",
-    "          fraction_recovered=(0,1,0.01), initial_population=(0,500000,1000),\n",
+    "          fraction_recovered=(0,1,0.01), initial_population=(0,1000000,1000),\n",
     "          initial_percent_recovered=(0,100,0.01), initial_percent_infected=(0,100,0.01),\n",
     "         xmin=(0,10000,5), xmax=(0,10000,5), ymin=(0,100000,50), ymax=(0,600000,50))\n",
     "def SIR_model(total_time=4000, avg_contacts_per_day=0.50, length_of_infection=31,\n",
@@ -354,10 +354,12 @@
     "        S[j+1] = S[j] + dt*dSdt \n",
     "        I[j+1] = I[j] + dt*dIdt\n",
     "        N[j+1] = N[j] + dt*dNdt\n",
-    "        if S[j] < 0.01:\n",
-    "            S[j+1]=0\n",
-    "        if I[j] < 0.01:\n",
+    "        if I[j] < 1:\n",
     "            I[j+1]=0\n",
+    "        if N[j] < 1:\n",
+    "            S[j+1]=0\n",
+    "            I[j+1]=0\n",
+    "            R[j+1]=0\n",
     "    R = N-S-I\n",
     "    \n",
     "    R0 = lmbda/(mu + alpha)\n",
@@ -387,7 +389,6 @@
     "          'Initial population = ' + str(initial_population) + ' people',\n",
     "          'Initial percent recovered = ' +str(initial_percent_recovered) + '%',\n",
     "          'Initial percent infected = ' + str(initial_percent_infected) + '%',\n",
-    "          'Total population at the end of 1st year = ' + str(N[36600].round(0)),\n",
     "         sep = \"\\n\")\n",
     "    \n",
     "    return plt.show()"
@@ -403,23 +404,26 @@
     "\n",
     "Individuals in the recovered population do not have immunity forever. We will allow them to lose their immunity at a rate $r$. Hence, the differential equations become:\n",
     "\n",
-    "        $$S'=\\nu N-\\frac{\\lambda}{N}SI-\\mu S+rR$$\n",
-    "        $$I'=\\frac{\\lambda}{N}SI-\\mu I-\\alpha I$$\n",
-    "        $$R'=f\\alpha I-\\mu R-rR$$\n",
-    "        $$N'=\\nu N-(1-f)\\alpha I-\\mu N$$\n",
+    "$$S'=\\nu N-\\frac{\\lambda}{N}SI-\\mu S+rR$$\n",
+    "        \n",
+    "$$I'=\\frac{\\lambda}{N}SI-\\mu I-\\alpha I$$\n",
+    "        \n",
+    "$$R'=f\\alpha I-\\mu R-rR$$\n",
+    "        \n",
+    "$$N'=\\nu N-(1-f)\\alpha I-\\mu N$$\n",
     "\n",
     "We assume that each individual loses immunity at the same average rate. Note that $r=\\frac{1}{\\text{length of immunity in days}}$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f02e763c23e6497ba662baca99ea5b65",
+       "model_id": "9366f93f7f0c4f46a8a0acb9ffc43b23",
        "version_major": 2,
        "version_minor": 0
       },
@@ -482,10 +486,12 @@
     "        I[j+1] = I[j] + dt*dIdt\n",
     "        R[j+1] = R[j] + dt*dRdt\n",
     "        N[j+1] = N[j] + dt*dNdt\n",
-    "        if S[j] < 0.01:\n",
-    "            S[j+1]=0\n",
-    "        if I[j] < 0.01:\n",
+    "        if I[j] < 1:\n",
     "            I[j+1]=0\n",
+    "        if N[j] < 1:\n",
+    "            S[j+1]=0\n",
+    "            I[j+1]=0\n",
+    "            R[j+1]=0\n",
     "    \n",
     "    R0 = lmbda/(mu + alpha)\n",
     "    \n",
