--- a/Research Question Exploration Notebook.ipynb
+++ b/Research Question Exploration Notebook.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,8 @@
     "import math\n",
     "import scipy as sp\n",
     "import pandas as pd\n",
-    "import Model_Functions as mf"
+    "import Model_Functions as mf\n",
+    "import modifiedBrauerSIRSbd as mb"
    ]
   },
   {
@@ -3120,6 +3121,209 @@
     "              title= 'SIR model with birth, death and immunity for ' + str(days)\n",
     "               + ' days \\n R0=2.0', xlabel= 'days since 1.0 percent of population infected',\n",
     "              ylabel = 'population', plotname= 'SIRbdUSAR02im' + str(days) + '.png', plotsave=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding in a stochastic component to termination cut-off"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7188507964809223\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>days</th>\n",
+       "      <th>susceptible</th>\n",
+       "      <th>infected</th>\n",
+       "      <th>recovered</th>\n",
+       "      <th>total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>99000.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>100000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.01</td>\n",
+       "      <td>98997.534240</td>\n",
+       "      <td>1001.974760</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>100000.009000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.02</td>\n",
+       "      <td>98995.063711</td>\n",
+       "      <td>1003.953358</td>\n",
+       "      <td>1.000932</td>\n",
+       "      <td>100000.018000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.03</td>\n",
+       "      <td>98992.588403</td>\n",
+       "      <td>1005.935800</td>\n",
+       "      <td>1.502797</td>\n",
+       "      <td>100000.027000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.04</td>\n",
+       "      <td>98990.108308</td>\n",
+       "      <td>1007.922095</td>\n",
+       "      <td>2.005597</td>\n",
+       "      <td>100000.036000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36495</th>\n",
+       "      <td>364.95</td>\n",
+       "      <td>20072.858760</td>\n",
+       "      <td>14632.058012</td>\n",
+       "      <td>65624.078218</td>\n",
+       "      <td>100328.994990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36496</th>\n",
+       "      <td>364.96</td>\n",
+       "      <td>20072.860013</td>\n",
+       "      <td>14632.057074</td>\n",
+       "      <td>65624.086933</td>\n",
+       "      <td>100329.004019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36497</th>\n",
+       "      <td>364.97</td>\n",
+       "      <td>20072.861267</td>\n",
+       "      <td>14632.056136</td>\n",
+       "      <td>65624.095646</td>\n",
+       "      <td>100329.013049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36498</th>\n",
+       "      <td>364.98</td>\n",
+       "      <td>20072.862522</td>\n",
+       "      <td>14632.055198</td>\n",
+       "      <td>65624.104358</td>\n",
+       "      <td>100329.022078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36499</th>\n",
+       "      <td>364.99</td>\n",
+       "      <td>20072.863780</td>\n",
+       "      <td>14632.054260</td>\n",
+       "      <td>65624.113069</td>\n",
+       "      <td>100329.031108</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>36500 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         days   susceptible      infected     recovered          total\n",
+       "0        0.00  99000.000000   1000.000000      0.000000  100000.000000\n",
+       "1        0.01  98997.534240   1001.974760      0.500000  100000.009000\n",
+       "2        0.02  98995.063711   1003.953358      1.000932  100000.018000\n",
+       "3        0.03  98992.588403   1005.935800      1.502797  100000.027000\n",
+       "4        0.04  98990.108308   1007.922095      2.005597  100000.036000\n",
+       "...       ...           ...           ...           ...            ...\n",
+       "36495  364.95  20072.858760  14632.058012  65624.078218  100328.994990\n",
+       "36496  364.96  20072.860013  14632.057074  65624.086933  100329.004019\n",
+       "36497  364.97  20072.861267  14632.056136  65624.095646  100329.013049\n",
+       "36498  364.98  20072.862522  14632.055198  65624.104358  100329.022078\n",
+       "36499  364.99  20072.863780  14632.054260  65624.113069  100329.031108\n",
+       "\n",
+       "[36500 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mb.modifiedBrauerSIRSbd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5363582750091802\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;31mTypeError\u001b[0m: float() argument must be a string or a number, not 'DataFrame'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-74-48952c563054>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodifiedBrauerSIRSbd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#for j in range(100):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence."
+     ]
+    }
+   ],
+   "source": [
+    "a = np.zeros(100)\n",
+    "for i in range(100):\n",
+    "    a[i] = mb.modifiedBrauerSIRSbd()\n",
+    "    \n",
+    "#for j in range(100):\n",
+    " #   sus = a[j].suscetible"
    ]
   },
   {
